plugins/blur: limit app-requested blur to the app surface

It does not make any sense that blur would be extended to the decoration when
the decoration doesn't request it

BUG: 487538